updated to question 49

--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="llab-nav navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="nav navbar-nav navbar-left navbar-title">CS10 AutoQuiz | Fall 2017 | UC Berkeley</div>
+      <div class="nav navbar-nav navbar-left navbar-title">CS10 AutoQuiz | Spring 2018 | UC Berkeley</div>
       <div class="nav navbar-nav navbar-right">
         <ul class="nav-btns btn-group">
           <a class="btn btn-default" id="return" href="{{url_for('welcome')}}">return</a>
