--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -57,11 +57,11 @@
       </div>
     </nav>
 
-    <div class="title-small-screen">CS10 AutoQuiz | Fall 2017 | UC Berkeley</div>
+    <div class="title-small-screen">CS10 AutoQuiz | Spring 2018 | UC Berkeley</div>
     <div class="llab-full">
       <p>
         This is an AutoQuiz of The Beauty and Joy of Computing (Berkeley CS10) course during
-        Fall 2017.
+        Spring 2018.
       </p>
 
       <script>
@@ -161,8 +161,8 @@
           </div>
           {% for topic_elem in all_topics %}
           <div class="tab-pane fade" id="topic_{{topic_elem[0]}}">
-            <table class="table" 
-                    data-toggle="table" 
+            <table class="table"
+                    data-toggle="table"
                     data-url="/topic/{{topic_elem[0]}}"
                     data-pagination="true"
                     data-search="true">
@@ -272,7 +272,7 @@
         // console.log(document.getElementById("zoomable").checked);
         // render_graph(true);
       </script>
-    
+
 
     </div>
     <script>
@@ -367,7 +367,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" 
+            <button type="button" class="close" data-dismiss="modal"
                 aria-hidden="true">×
             </button>
             <h4 class="modal-title" id="myModalLabel">
