--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <nav class="llab-nav navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="nav navbar-nav navbar-left navbar-title">CS10 AutoQuiz | Fall 2017 | UC Berkeley</div>
+      <div class="nav navbar-nav navbar-left navbar-title">CS10 AutoQuiz | Spring 2018 | UC Berkeley</div>
       <div class="nav navbar-nav navbar-right">
         <ul class="nav-btns btn-group">
           <!--a class="btn btn-default" id="return" href="#">logout</a-->
@@ -167,7 +167,7 @@
                   </p>
                 {% endif %}
               {% endfor %}
-              
+
             </div>
             <div class="radiobuttondiv">
               {% for candidate in answers %}
@@ -254,7 +254,7 @@
             <!--div class="numberAttemptsDiv">This is your 0st attempt.</div-->
             <div class="scoreDiv" id="correctness"></div> <!--correct / not yet correct-->
             <div class="resultMessageDiv" id="show_hint"></div>
-          </div> 
+          </div>
           <div class="buttonDiv">
             <table class="buttonTable">
               <tbody>
