--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -108,7 +108,7 @@
         }
       </script>
       <div class="panel panel-primary MultipleChoice Question">
-        <div class="panel-heading questionType">Question {{question_id}}</div>
+        <div class="panel-heading questionType">Question {{question_id}} &nbsp;&nbsp; <small>{{description}}</small></div>
         <div class="panel-body currentQuestionBox">
           <div class="leftColumn">
             <div class="promptDiv">
